--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "@react-native-firebase/messaging": "^21.7.1",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
+    "axios": "^1.7.9",
     "expo": "~52.0.26",
     "expo-blur": "~14.0.2",
     "expo-constants": "~17.0.4",
+    "expo-dev-client": "~5.0.10",
     "expo-device": "^7.0.2",
     "expo-firebase-messaging": "^2.0.0",
     "expo-font": "~13.0.3",
@@ -45,8 +47,7 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5",
-    "expo-dev-client": "~5.0.10"
+    "react-native-webview": "13.12.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
