--- a/package.json
+++ b/package.json
@@ -24,15 +24,16 @@
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/stack": "^7.1.1",
     "axios": "^1.7.9",
-    "expo-blur": "~14.0.2",
-    "expo-constants": "~17.0.4",
+    "expo-blur": "~14.0.3",
+    "expo-constants": "~17.0.5",
     "expo-dev-client": "~5.0.10",
     "expo-device": "^7.0.2",
     "expo-firebase-messaging": "^2.0.0",
     "expo-font": "~13.0.3",
     "expo-haptics": "~14.0.1",
-    "expo-linking": "~7.0.4",
-    "expo-notifications": "~0.29.12",
+    "expo-linear-gradient": "^14.0.2",
+    "expo-linking": "~7.0.5",
+    "expo-notifications": "~0.29.13",
     "expo-router": "~4.0.17",
     "expo-secure-store": "^14.0.1",
     "expo-splash-screen": "~0.29.21",
