--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "expo-firebase-messaging": "^2.0.0",
     "expo-font": "~13.0.3",
     "expo-haptics": "~14.0.1",
+    "expo-image-picker": "^16.0.4",
     "expo-linear-gradient": "^14.0.2",
     "expo-linking": "~7.0.5",
     "expo-notifications": "~0.29.13",
