--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@clerk/clerk-expo": "^2.6.18",
     "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/datetimepicker": "^8.3.0",
     "@react-native-firebase/app": "^21.7.1",
     "@react-native-firebase/messaging": "^21.7.1",
     "@react-native-picker/picker": "^2.11.0",
@@ -52,6 +53,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.6",
+    "react-native-date-picker": "^5.0.10",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-picker-select": "^9.3.1",
     "react-native-reanimated": "~3.16.1",
